--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Detecting And Classifying Objects In Aerial Imagery.zip
 Detecting And Classifying Objects In Aerial Imagery/
-
+coco/coco annotations/
+.idea/
