Started conversion to pascal voc

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Detecting And Classifying Objects In Aerial Imagery.zip
 Detecting And Classifying Objects In Aerial Imagery/
 coco/coco annotations/
 .idea/
+data/
