--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 Detecting And Classifying Objects In Aerial Imagery.zip
-Detecting And Classifying Objects In Aerial Imagery/
+Detecting And Classifying Objects In Aerial Imagery/Train/Imagery data/
 coco/coco annotations/
 .idea/
 data/
