Modified report, data insights, returned config to scale=600

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 Detecting And Classifying Objects In Aerial Imagery.zip
 Detecting And Classifying Objects In Aerial Imagery/Train/Imagery data/
+Detecting And Classifying Objects In Aerial Imagery/Train/Images with objects/
 coco/coco annotations/
 .idea/
 data/
